--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,13 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
     "express-validator": "^7.2.1",
-    "mongoose": "^8.4.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.18.1",
     "multer": "^1.4.5-lts.1"
   }
 }
